--- a/app/src/main/res/layout/row_species.xml
+++ b/app/src/main/res/layout/row_species.xml
@@ -12,6 +12,7 @@
     </data>
 
     <android.support.v7.widget.CardView
+            android:onClick="@{model.onClickListener}"
             app:cardBackgroundColor="@color/colorWhite"
             android:layout_margin="@dimen/dp_10"
             android:layout_width="match_parent"
