--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,8 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_margin="@dimen/dp_10"
+                    android:gravity="center"
                     tools:visibility="visible"
                     android:visibility="@{model.errorVisible ? View.VISIBLE : View.GONE}"
                     android:text="@{model.textError}"
